--- a/views/teachersEdit.ejs
+++ b/views/teachersEdit.ejs
@@ -38,8 +38,8 @@
             <label style="color: #FFFFFF"><%=courses[i].name%></label>
 
             <div id="<%='course' + i%>" class="hidden">
-              <label>
-              Number of Sections: <input id="<%='input' + i%>" type="number" min="0"/>
+              <label style="color: #FFFFFF">
+              <b>Number of Sections:</b> <input id="<%='input' + i%>" type="number" min="0"/>
               </label>    
             </div>
 
