--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,11 @@
     <h1>Scheduling</h1>
     <a href="/dataView" role="button">View Data</a>
   </div>
+  <div>
+    <h2>Current Schedule</h2>
+    <a id="genButton" role="button">View Data</a>
+    <h1 id="textStuff"></h1>
+  </div>
 </main>
 <!-- /Main Site -->
 
