--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,9 @@
           font-family: monospace;
         "
       ></h1>
+      <a id="downloadButton" role="button" style="color: white"
+        >Download Schedule</a
+      >
     </center>
   </div>
 </main>
