css fixes and page navigation (back button on classrooms edit is no longer ginormous!)

--- a/views/classroomsEdit.ejs
+++ b/views/classroomsEdit.ejs
@@ -5,7 +5,7 @@
 <% classrooms.sort((a, b) => (a.roomNum > b.roomNum) ? 1 : -1) %>
 <!-- Main Site -->
 <main style="background-color: #ffffff">
-  <div class="classroomsEditTopBar">
+  <div class="courseEditTopBar">
     <div class="topBarText">Edit Classrooms <a href="/dataView" class="backButton" role="button">Back</a>
     </div>
     <img src="img/ctelogo.png" alt="CTElogo" />
