--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <div class="indexTopBar">
     <img src="img/SE-GitHub-image.png" alt="Huskie code logo" />
     <h1>Scheduling</h1>
-    <a href="/dataView" role="button">View Data</a>
+    <a href="/dataView" role="button" style="margin: 30px">View Data</a>
   </div>
   <div class="box">
     <h2 style="color: white">Current Schedule</h2>
