--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -7,6 +7,7 @@
   <div class="indexTopBar">
     <img src="img/SE-GitHub-image.png" alt="Huskie code logo" />
     <h1>Data</h1>
+    <a href="/" role="button" style="margin: 30px">Back</a>
   </div>
   <div class="box flexBox">
 
