--- a/views/teachersEdit.ejs
+++ b/views/teachersEdit.ejs
@@ -24,13 +24,13 @@
   </div>
   
   <div class="box">
-    <div class="box2">
-      <h1>Teacher Name</h1>
+    <label class="box2">
+      Teacher Name:
       <textarea id="namer" rows="1" placeholder="Teacher Name"></textarea>
-    </div>
+    </label>
 
     <div class="box2">
-      <h1>Courses</h1>
+      Courses:
       <div class="scrollSelector">
         <% for(let i=0; i < courses.length; i++) { %>
           <div class="box2">
