okay i shouldnt be commiting this much but i REALLY wanted to fix that button

--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -7,7 +7,7 @@
   <div class="indexTopBar">
     <img src="img/SE-GitHub-image.png" alt="Huskie code logo" />
     <h1>Data</h1>
-    <a href="/" role="button" style="margin: 30px">Back</a>
+    <a href="/" role="button" style="margin: 30px">Back to Generator</a>
   </div>
   <div class="box flexBox">
 
