--- a/pages/edit/styles.css
+++ b/pages/edit/styles.css
@@ -596,6 +596,258 @@ html {
     color: var(--text-color);
     opacity: 1;
   }
+
+
+
+.courseMain {
+    border-radius: 10px;
+    padding: 7px;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 42px;
+    background: var(--og-light-2);
+    box-shadow: inset -2px -2px 4px rgba(0, 0, 0, 0.2), 
+                inset 2px 2px 4px rgba(255, 255, 255, 0.1);
+}
+
+.courseMainText {
+    margin-top: -2px;
+    text-wrap: nowrap;
+}
+
+.courseNameInput {
+    border-radius: 0px;
+    background: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    display: flex;
+    color: var(--text-color);
+    position: relative;
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 20px;
+    letter-spacing: 0px;
+    opacity: 1;
+    outline: none;
+    transition: border-bottom 0.2s ease;
+}
+
+.courseNameInput:focus {
+    border-bottom: 1px solid var(--text-color);
+}
+
+
+.courseDetails {
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 7px;
+}
+
+.courseName{
+  border-radius: 10px;
+    padding: 7px;
+    padding-top: 5px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 5px;
+    height: fit-content;
+    background: var(--darker-light-2);
+    box-shadow: inset -2px -2px 4px rgba(0, 0, 0, 0.2), 
+                inset 2px 2px 4px rgba(255, 255, 255, 0.1);
+}
+
+.compatibleClassrooms {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.classroomList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  background: var(--dark-gradient-2);
+  border-radius: 10px;
+  display: flex;
+  justify-content: left;
+  padding: 8px;
+  align-items: center;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2), 
+  -2px -2px 4px rgba(255, 255, 255, 0.1);
+}
+
+
+.classroomItem{
+  border-radius: 10px;
+  display: flex;
+  flex-shrink: 0;
+  height: 35px;
+  padding: 5px;
+  padding-left: 8px;
+  width: fit-content;
+  gap: 5px;
+  align-items: center;
+  background: var(--darker-light-2);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2), 
+  -2px -2px 4px rgba(255, 255, 255, 0.1);
+}
+
+.classroomItemText{
+  font-family: Inter;
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 0px;
+  color: var(--text-color);
+}
+
+.compatibleClassrooms {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+
+
+.removeClassroom {
+  margin-top: -2px;
+  width: 20px;
+  height: 20px;
+  background: url("images/trash.svg") no-repeat center center;
+  background-size: cover;
+  cursor: pointer;
+  opacity: 0.7;
+  transition: opacity 0.2s ease;
+}
+
+.removeClassroom:hover {
+  opacity: 1;
+}
+
+.addClassroomDiv {
+  flex-shrink: 0;
+  aspect-ratio: 1;
+  height: 80%;
+  opacity: 0.8;
+  background: var(--darker-light-2);
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2), 
+  -2px -2px 4px rgba(255, 255, 255, 0.1);
+  transition: opacity 0.2s ease;
+}
+
+.addClassroom {
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  
+  background: url("images/plus.png") no-repeat center center;
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
+  opacity: 1;
+  
+}
+
+.addClassroomDiv:hover {
+  opacity: 1;
+}
+
+.courseEntry .courseNameInput {
+  border-radius: 0px;
+  background: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  display: flex;
+  color: var(--text-color);
+  position: relative;
+  font-family: Inter, sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 0px;
+  opacity: 1;
+  outline: none;
+  transition: border-bottom 0.2s ease;
+}
+
+.courseEntry .courseNameInput:focus {
+  border-bottom: 1px solid var(--text-color);
+}
+
+.compatibleClassrooms, .coursePeriods, .courseSemesters {
+    border-radius: 10px;
+    padding: 7px;
+    padding-top: 5px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 5px;
+    height: fit-content;
+    background: var(--darker-light-2);
+    box-shadow: inset -2px -2px 4px rgba(0, 0, 0, 0.2), 
+                inset 2px 2px 4px rgba(255, 255, 255, 0.1);
+}
+
+.compatibleClassrooms ul, .coursePeriods ul, .courseSemesters ul {
+    list-style-type: none;
+    margin: 0;
+}
+
+.compatibleClassrooms li, .coursePeriods li, .courseSemesters li {
+    display: flex;
+    align-items: center;
+}
+
+.dropdown {
+    aspect-ratio: 1;
+    display: flex;
+    padding: 2px;
+    opacity: 0.8;
+    height: 100%;
+    border-radius: 5px;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    margin-left: 7px;
+    background: var(--og-light-1);
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4), 
+                -2px -2px 4px rgba(255, 255, 255, 0.2);
+}
+
+.dropdownIcon {
+    flex-shrink: 0;
+    aspect-ratio: 1;
+    height: 80%;
+    min-width: 10px;
+    background: url("images/dropdown.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    transform: rotate(180deg);
+    transition: transform 0.5s ease;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.dropdown:hover {
+    opacity: 1;
+}
+
   .entryMain{
     border-radius: 10px;
     padding: 7px;
@@ -616,7 +868,7 @@ html {
   .removeTeacher{
     display: flex;
     margin-left: auto;
-    background: url("images/trash.png");
+    background: url("images/trash.svg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -631,6 +883,28 @@ html {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 
+  .removeCourse{
+    display: flex;
+    margin-left: auto;
+    background: url("images/trash.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    transform: scale(1);
+    aspect-ratio: 1;
+    width: auto;
+    height: 70%;
+    margin-top: -1px;
+    opacity: 0.7;
+    cursor: pointer;
+    transition: all 0.2s;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .removeCourse:hover {
+    opacity: 1;
+    transform: scale(1.1);
+}
 
   @keyframes remove-entry-shadow {
     0% {
@@ -836,7 +1110,6 @@ html {
     -2px -2px 4px rgba(255, 255, 255, 0.1);
     transition: width 0.5s ease;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
   }
 
   .teacherCourseCounter{
@@ -1022,6 +1295,16 @@ html {
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2), 
     -2px -2px 4px rgba(255, 255, 255, 0.1);
   }
+  .courseOpenPeriods{
+    background: var(--dark-gradient-2);
+    border-radius: 7px;
+    display: flex;
+    justify-content: space-around;
+    padding: 7px;
+    gap: 7px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2), 
+    -2px -2px 4px rgba(255, 255, 255, 0.1);
+  }
   .teacherCheckbox{
     flex-wrap: wrap;
     width: 12.5%;
@@ -1070,4 +1353,52 @@ html {
     width: calc(100% + 4px);
     height: calc(100% + 4px);
     filter: hue-rotate(calc(-220deg + 1deg * (var(--light-hue-1)))) grayscale(calc(100% - var(--light-sat-1)));
+  }
+
+  .courseCheckbox{
+    flex-wrap: wrap;
+    width: 12.5%;
+    display: flex;
+    border-radius: 5px;
+    flex-direction: column;
+    background-color: var(--darker-light-2);
+    align-items: center;
+    justify-content: center;
+    padding: 7px;
+    gap: 5px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1), 
+    -2px -2px 6px rgba(255, 255, 255, 0.1);
+  }
+  .coursePeriodCheckboxContainer{
+    aspect-ratio: 1;
+    margin: 0px;
+    width: 100%;
+    max-width: 25px;
+    height: auto;
+    border-radius: 5px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.6), 
+    inset -2px -2px 4px rgba(255, 255, 255, 0.4),
+    2px 2px 4px rgba(0, 0, 0, 0.2), 
+    -2px -2px 4px rgba(255, 255, 255, 0.2);
+  }
+  .coursePeriodCheckbox{
+    opacity: 1;
+    aspect-ratio: 1;
+    flex-shrink: 0;
+    margin-right: 4px;
+    margin-bottom: 2px;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    filter: hue-rotate(calc(-220deg + 1deg * (var(--light-hue-1)))) grayscale(calc(100% - var(--light-sat-1)));
+  }
+  .coursePeriodText{
+    width: 100%;
+    font-size: 25px;
+    margin-top: -5px;
+    margin-bottom: -5px;
+    text-align: center;
   }
