--- a/pages/edit/styles.css
+++ b/pages/edit/styles.css
@@ -624,6 +624,14 @@ html {
     color: var(--text-color);
     opacity: 1;
   }
+  .classroomText{
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 25px;
+    letter-spacing: 1px;
+    color: var(--text-color);
+    opacity: 1;
+  }
 
 
 
@@ -709,7 +717,6 @@ html {
   display: flex;
   justify-content: left;
   padding: 8px;
-  align-items: center;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2), 
   -2px -2px 4px rgba(255, 255, 255, 0.1);
 }
@@ -814,7 +821,7 @@ html {
   border-bottom: 1px solid var(--text-color);
 }
 
-.compatibleClassrooms, .coursePeriods, .courseSemesters {
+.compatibleClassrooms, .coursePeriods, .courseSemesters, .classroomPeriods {
     border-radius: 10px;
     padding: 7px;
     padding-top: 5px;
@@ -851,8 +858,6 @@ html {
     align-items: center;
     margin-left: 7px;
     background: var(--og-light-1);
-    transition: transform 0.5s ease, opacity 0.5s ease;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4), 
                 -2px -2px 4px rgba(255, 255, 255, 0.2);
@@ -1035,43 +1040,6 @@ html {
     font-weight: 500;
   }
 
-  .dropdown{
-    aspect-ratio: 1;
-    display: flex;
-    padding: 2px;
-    opacity: 0.8;
-    height: 100%;
-    border-radius: 5px;
-    width: auto;
-    justify-content: center;
-    align-items: center;
-    margin-left: 7px;
-    background: var(--og-light-1);
-    transition: transform 0.5s ease opacity 0.5 ease;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4), 
-    -2px -2px 4px rgba(255, 255, 255, 0.2);
-  }
-
-  .dropdownIcon{
-    flex-shrink: 0;
-    aspect-ratio: 1;
-    height: 80%;
-    min-width: 10px;
-    background: url("images/dropdown.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    transform: rotate(180deg);
-    transition: transform 0.5s ease;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-  }
-  .dropdown:hover{
-    opacity: 1;
-  }
-
   .teacherCourses{
     border-radius: 10px;
     padding: 7px;
@@ -1213,6 +1181,15 @@ html {
 
 
   .teacherSubList{
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 7px;
+  }
+
+  .classroomSubList{
     height: fit-content;
     width: 100%;
     display: flex;
@@ -1492,4 +1469,56 @@ html {
     margin-top: -5px;
     margin-bottom: -5px;
     text-align: center;
+  }
+  
+  .classroomOpenPeriods{
+    background: var(--dark-gradient-2);
+    border-radius: 7px;
+    display: flex;
+    justify-content: space-around;
+    padding: 7px;
+    gap: 7px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2), 
+    -2px -2px 4px rgba(255, 255, 255, 0.1);
+  }
+
+  .classroomCheckbox{
+    flex-wrap: wrap;
+    width: 12.5%;
+    display: flex;
+    border-radius: 5px;
+    flex-direction: column;
+    background-color: var(--darker-light-2);
+    align-items: center;
+    justify-content: center;
+    padding: 7px;
+    gap: 5px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1), 
+    -2px -2px 6px rgba(255, 255, 255, 0.1);
+  }
+  .classroomPeriodCheckboxContainer{
+    aspect-ratio: 1;
+    margin: 0px;
+    width: 100%;
+    max-width: 25px;
+    height: auto;
+    border-radius: 5px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.6), 
+    inset -2px -2px 4px rgba(255, 255, 255, 0.4),
+    2px 2px 4px rgba(0, 0, 0, 0.2), 
+    -2px -2px 4px rgba(255, 255, 255, 0.2);
+  }
+  .classroomInputCheckbox{
+    opacity: 1;
+    aspect-ratio: 1;
+    flex-shrink: 0;
+    margin-right: 4px;
+    margin-bottom: 2px;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    filter: hue-rotate(calc(-220deg + 1deg * (var(--light-hue-1)))) grayscale(calc(100% - var(--light-sat-1)));
   }
