--- a/pages/view/styles.css
+++ b/pages/view/styles.css
@@ -461,7 +461,7 @@ html {
     position: relative;
     top: 0px;
     left: 0px;
-    overflow: visible;
+    overflow: scroll;
   }
   .navbar {
     width: 100%;
@@ -720,7 +720,9 @@ html {
   
   .mainSection {
     width: 100%;
-    height: 80%;
+    height: 130%;
+    flex-grow: 0;
+    flex-shrink: 0;
     display: flex;
     gap: 15px;
     flex-direction: row;
@@ -748,6 +750,18 @@ html {
     padding: 10px 10px;
     opacity: 1;
     position: relative;
+    border-radius: 20px;
+    box-shadow: var(--box-shadow2);
+    overflow: hidden;
+  }
+  .scheduleFrame2{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background: var(--og-dark-2);
+    padding: 10px 10px;
+    opacity: 1;
+    position: ;
     border-radius: 20px;
     box-shadow: var(--box-shadow2);
     overflow: hidden;
@@ -951,7 +965,7 @@ html {
     gap: 15px;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 60%;
     background: var(--og-dark-2);
     padding: 20px 20px;
 
