testing new layouts

--- a/pages/edit/styles.css
+++ b/pages/edit/styles.css
@@ -11,6 +11,10 @@ html {
     --box-shadow3: 2px 2px 10px rgba(0, 0, 0, 0.7), 
                   -2px -2px 10px rgba(255, 255, 255, 0.25);
 
+    --box-shadow: none
+    --box-shadow2: none
+    --box-shadow3: none
+
     --dark-hue-1: 272;  --dark-hue-2: 282;  --light-hue-1: 11;   --light-hue-2: 18;
     --dark-sat-1: 100%; --dark-sat-2: 100%; --light-sat-1: 100%; --light-sat-2: 100%;
     --dark-lum-1: 15%;  --dark-lum-2: 23%;  --light-lum-1: 39%;  --light-lum-2: 47%;
@@ -57,6 +61,7 @@ html {
     src: url(font/Inter.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
+
 
   .dropdownFrame{
     border-radius: 15px;
