Forgot to push code from last week, so redoing it
It was still buggy before this

Issue was that the class itself for the requirements text and the popup used the same name, so the text name was changed to requirementsTrigger, and not requirementsPopup

Also earlier in the week the popup actually worked at one point, but then the popup didn't have any CSS and appeared in the top left of the screen

Hopefully I can get this to work

IT WORKS!

The CSS is a little bit off, and I just have some temporary text (that can hopefully become dynamic in the next commit), but it works!

--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -123,7 +123,7 @@
                       <span class="topPercent">100%</span>
                     </div>
                     <div class="topLine"></div>
-                    <span class="topText">REQUIREMENTS FILLED</span>
+                    <span class="requirementsPopUp">REQUIREMENTS FILLED</span>
                   </div>
                   <div class="bottomGraphFrame">
                     <div class="bottomMask">
@@ -156,6 +156,24 @@
                 <span class="generateText">GENERATE NEW SCHEDULE</span>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="requirementsPopUp schedulePopUp">
+      <div class="popupFrame">
+        <div class="teacherFlex">
+          <div class="popupX">
+            <div class="popupXImage"></div>
+          </div>
+        </div>
+        <div class="courseIconFlex">
+          <div class="requirementsList">
+            <span class="popupText" style="font-size: 14px; margin-bottom: 8px;">CORE REQUIREMENTS</span>
+            <div class="requirementItem popupText">✔ Mathematics (4/4)</div>
+            <div class="requirementItem popupText">✔ Science (3/4)</div>
+            <div class="requirementItem popupText">✔ English (4/4)</div>
+            <div class="requirementItem popupText">✖ Arts (1/2)</div>
           </div>
         </div>
       </div>
