--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -123,7 +123,7 @@
                       <span class="topPercent">100%</span>
                     </div>
                     <div class="topLine"></div>
-                    <span class="requirementsPopUp">REQUIREMENTS FILLED</span>
+                    <span class="requirementsTrigger">REQUIREMENTS FILLED</span>
                   </div>
                   <div class="bottomGraphFrame">
                     <div class="bottomMask">
@@ -160,23 +160,26 @@
         </div>
       </div>
     </div>
+    <!--NEW POPUP!!-->
     <div class="requirementsPopUp schedulePopUp">
       <div class="popupFrame">
-        <div class="teacherFlex">
-          <div class="popupX">
-            <div class="popupXImage"></div>
-          </div>
-        </div>
+        <!-- Remove the entire teacherFlex div containing the X -->
         <div class="courseIconFlex">
           <div class="requirementsList">
             <span class="popupText" style="font-size: 14px; margin-bottom: 8px;">CORE REQUIREMENTS</span>
-            <div class="requirementItem popupText">✔ Mathematics (4/4)</div>
-            <div class="requirementItem popupText">✔ Science (3/4)</div>
-            <div class="requirementItem popupText">✔ English (4/4)</div>
-            <div class="requirementItem popupText">✖ Arts (1/2)</div>
+            <div class="requirementItem popupText">APCS: 5/5</div>
+            <div class="requirementItem popupText">CP1: 4/5</div>
+            <div class="requirementItem popupText">CP2: 4/5</div>
+            <div class="requirementItem popupText">SE: 2/2</div>
           </div>
         </div>
       </div>
     </div>
   </body>
 </html>
+
+<!--
+<div class="requirementItem popupText">APCS: 5/5</div>
+<div class="requirementItem popupText">CP1: 4/5</div>
+<div class="requirementItem popupText">CP2: 4/5</div>
+<div class="requirementItem popupText">SE: 2/2</div>-->
