I originally did want to finish this earlier, but with robotics comp it was very difficult to, so I did as much as I could to make up for it
I don't really know what's happening with the logic of both pop ups, since you can't close the schedule popup unless you reopen the requirements popup, which also opens automatically when you open the schedule popup...? I don't honestly know what's happening with this, so I'm going to call this as the end of sprint 2

For sprint 3, I think I'll continue debugging this, then also add the dynamic feature/actual feature of this popup, which is to record if something is missing and if requirements are met

--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -163,7 +163,11 @@
     <!--NEW POPUP!!-->
     <div class="requirementsPopUp schedulePopUp">
       <div class="popupFrame">
-        <!-- Remove the entire teacherFlex div containing the X -->
+        <div class="teacherFlex">
+          <div class="popupX">
+            <div class="popupXImage"></div>
+          </div>
+        </div>
         <div class="courseIconFlex">
           <div class="requirementsList">
             <span class="popupText" style="font-size: 14px; margin-bottom: 8px;">CORE REQUIREMENTS</span>
